--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="dark" data-theme="cupcake">
+<html lang="en" class="dark" data-theme="luxury">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body class="bg-gradient-to-r from-base-100 to-neutral">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body >
+		%sveltekit.body%
 	</body>
 </html>
